test/testdata/e2e/template_extra_fields/listener-https.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: https
  annotations:
    envoy.kaasops.io/description: "HTTPS listener on port 10443 with TLS inspector"
spec:
  name: https
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 443
  listener_filters:
    - name: "envoy.filters.listener.tls_inspector"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
