test/testdata/e2e/template_extra_fields/virtual-service-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: virtual-service-template
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"{{ .Message }}\"}"
  extraFields:
    - name: Message
      type: string
      required: true
