test/testdata/e2e/template_extra_fields/virtual-service-v2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  template:
    name: virtual-service-template
  virtualHost:
    domains:
      - exc.kaasops.io
  extraFields:
    Message: "Hello Updated!"  # Changed extraField value - should trigger rebuild
